ci: Fix automatic altitude profile size flickering

--- a/website/public/app-ui/css/gallery.scss
+++ b/website/public/app-ui/css/gallery.scss
@@ -18,14 +18,11 @@ div.gallery {
     transition: all 0.5s ease-in-out;
 
     figure.alt-profile {
-        width: auto;
-        min-width: 112px;
+        min-width: 212px;
         div.parent {
-            width: auto;
-            min-width: 110px;
+            min-width: 210px;
             .image-container {
-                width: auto;
-                min-width: 100px;
+                min-width: 200px;
             }
         }
     }
